Pagination / filter / ordering (#86)
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>